--- a/app/views/reconciliation-cash-bag.html
+++ b/app/views/reconciliation-cash-bag.html
@@ -1,4 +1,4 @@
-<div class="fluid-container module-container">
+<div class="module-container">
   <h1><span class="controller-state text-capitalize">{{ state }}</span> {{ ::viewName }}</h1>
 
   <div class="row row-as-table">
