--- a/app/views/cash-bag-list.html
+++ b/app/views/cash-bag-list.html
@@ -124,7 +124,7 @@
         </button>
 
         <button
-          ng-click="showCreatePopup()"
+          ng-click="showCreatePopup()" ng-show="isCRUD"
           class="btn btn-primary add-cash-bag-btn"
           data-loading-text="Loading...">
           <i class="fa fa-plus" aria-hidden="true"></i>
@@ -258,7 +258,7 @@
         <button
           class="btn btn-primary btn-xs edit-cash-bag-{{cashBag.id}}-btn"
           ng-click="editCashBag(cashBag)"
-          ng-show="isCashBagEditable(cashBag)"
+          ng-show="isCRUD && isCashBagEditable(cashBag)"
           data-loading-text="&#9716;">
           <i class="fa fa-pencil"></i>
         </button>
