--- a/app/views/exchange-rates.html
+++ b/app/views/exchange-rates.html
@@ -113,7 +113,7 @@
           </div>
         </div>
       </div>
-      <div class="panel-footer text-right" ng-show="showActionButtons">
+      <div class="panel-footer text-right" ng-show="isSubmit && showActionButtons">
         <button
           class="btn btn-default save-btn"
           data-loading-text="Saving..."
