--- a/app/views/manage-goods-received.html
+++ b/app/views/manage-goods-received.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="col-xs-6 text-right">
-        <a ng-show="catererStationId" ng-href="/#/lmp-delivery-note/create/{{catererStationId}}" class="btn btn-primary"> + <span class="hidden-xs">Create Delivery Note</span></a>
+        <a ng-show="isCRUD && catererStationId" ng-href="/#/lmp-delivery-note/create/{{catererStationId}}" class="btn btn-primary"> + <span class="hidden-xs">Create Delivery Note</span></a>
         <button ng-show="catererStationId" class="btn btn-default"data-toggle="collapse" data-target="#search-collapse"
           aria-expanded="false" aria-controls="search-collapse">
           <span class="fa fa-filter" aria-hidden="true"></span>
@@ -126,10 +126,10 @@
           <a class="btn btn-info btn-xs" ng-href="/#/lmp-delivery-note/view/{{deliveryNote.id}}" tabindex="0">
             <i class="fa fa-file"></i>
           </a>
-          <a class="btn btn-primary btn-xs" ng-hide="deliveryNote.isAccepted" ng-href="/#/lmp-delivery-note/edit/{{deliveryNote.id}}"  tabindex="0" aria-disabled="true">
+          <a class="btn btn-primary btn-xs" ng-hide="!isCRUD || deliveryNote.isAccepted" ng-href="/#/lmp-delivery-note/edit/{{deliveryNote.id}}"  tabindex="0" aria-disabled="true">
             <i class="fa fa-pencil"></i>
           </a>
-          <button class="btn btn-danger btn-xs" ng-hide="deliveryNote.isAccepted" ng-click="deleteRecordDialog(deliveryNote.id)" tabindex="0" aria-disabled="true">
+          <button class="btn btn-danger btn-xs" ng-hide="!isCRUD || deliveryNote.isAccepted" ng-click="deleteRecordDialog(deliveryNote.id)" tabindex="0" aria-disabled="true">
             <i class="fa fa-trash"></i>
           </button>
         </td>
