--- a/app/views/stock-take-report.html
+++ b/app/views/stock-take-report.html
@@ -10,9 +10,9 @@
 
       <div class="col-xs-6 text-right">
 
-        <excel-upload type="stockTake" ng-show="importIsPossible() && canCreateStockTake()" class="excel-upload" upload-param="{{catererStationId}}"></excel-upload>
+        <excel-upload type="stockTake" ng-show="isStockTake && importIsPossible() && canCreateStockTake()" class="excel-upload" upload-param="{{catererStationId}}"></excel-upload>
 
-        <a ng-show="canCreateStockTake()" ng-href="/#/stock-take/create/{{catererStationId}}" class="btn btn-primary">
+        <a ng-show="isStockTake && canCreateStockTake()" ng-href="/#/stock-take/create/{{catererStationId}}" class="btn btn-primary">
           + <span class="hidden-xs hidden-sm">Create Stock Take</span>
         </a>
 
@@ -124,10 +124,10 @@
           <a class="btn btn-info btn-xs" ng-href="/#/stock-take/view/{{stockTake.id}}" tabindex="0">
             <i class="fa fa-file"></i>
           </a>
-          <a class="btn btn-primary btn-xs" ng-hide="stockTake.isSubmitted" ng-href="/#/stock-take/edit/{{stockTake.id}}"  tabindex="0" aria-disabled="true">
+          <a class="btn btn-primary btn-xs" ng-hide="!isStockTake || stockTake.isSubmitted" ng-href="/#/stock-take/edit/{{stockTake.id}}"  tabindex="0" aria-disabled="true">
             <i class="fa fa-pencil"></i>
           </a>
-          <button class="btn btn-danger btn-xs" ng-hide="stockTake.isSubmitted" ng-click="deleteRecordDialog(stockTake)" tabindex="0" aria-disabled="true">
+          <button class="btn btn-danger btn-xs" ng-hide="!isStockTake || stockTake.isSubmitted" ng-click="deleteRecordDialog(stockTake)" tabindex="0" aria-disabled="true">
             <i class="fa fa-trash"></i>
           </button>
         </td>
