TSVPORTAL-10897 | Edit StockDB.

--- a/app/views/stock-dashboard.html
+++ b/app/views/stock-dashboard.html
@@ -123,11 +123,11 @@
         <td>
           <input type="text" class="form-control text-right" value="{{stockItem.inboundQuantity}}" disabled name="stock-inbound-quantity-{{$index}}"/>
         </td>
-        <td id="currentCountQuantity-{{id}}" ng-click="stockTakeReasonOpen(stockItem, 'Count')">
+        <td id="currentCountQuantity-{{id}}" ng-click="isEditStock && stockTakeReasonOpen(stockItem, 'Count')">
           <input type="text" class="showAsActive form-control text-right" value="{{stockItem.currentQuantity}}"
                  ng-readonly="true"/>
         </td>
-        <td  id="currentUllageQuantity-{{id}}" ng-click="stockTakeReasonOpen(stockItem, 'Ullage')">
+        <td  id="currentUllageQuantity-{{id}}" ng-click="isEditStock && stockTakeReasonOpen(stockItem, 'Ullage')">
           <input type="text" class="showAsActive form-control text-right" value="{{stockItem.ullageQuantity}}"
                 ng-readonly="true"/>
         </td>
