--- a/app/views/company-exchange-rate-edit.html
+++ b/app/views/company-exchange-rate-edit.html
@@ -80,6 +80,8 @@
                             <th width="20%">EasyPay Denomination</th>
                             <th>Exchange Rate*</th>
                             <th colspan="2">Start/End Date*</th>
+                            <th>Updated Date/Time</th>
+                            <th>Updated User</th>
                             <th ng-show="isCRUD" width="8%">Actions</th>
                         </tr>
                     </thead>
@@ -111,17 +113,20 @@
                             </td>
                             <td colspan="2">
                               <div class="col-xs-12 col-sm-6">
-				                <date-picker-field
-				                  disable="isExchangeRateReadOnly(exchangeRate)" form="form" name="EffectiveFrom"
-				                  min-date="minDate" required="true" ng-model="exchangeRate.startDate">
-				                </date-picker-field>
-				              </div>
-				              <div class="col-xs-12 col-sm-6">
-				                <date-picker-field  disable="!isCRUD || isPastDate(exchangeRate)" form="form" end-current-effective="isCurrentEffectiveDate(exchangeRate)"
-				                  name="EffectiveTo" min-date="minDate" required="true"
-				                  ng-model="exchangeRate.endDate">
-				                </date-picker-field>
+                                <date-picker-field
+                                  disable="isExchangeRateReadOnly(exchangeRate)" form="form" name="EffectiveFrom"
+                                  min-date="minDate" required="true" ng-model="exchangeRate.startDate">
+                                </date-picker-field>
+                              </div>
+                              <div class="col-xs-12 col-sm-6">
+                                <date-picker-field  disable="!isCRUD || isPastDate(exchangeRate)" form="form" end-current-effective="isCurrentEffectiveDate(exchangeRate)"
+                                  name="EffectiveTo" min-date="minDate" required="true"
+                                  ng-model="exchangeRate.endDate">
+                                </date-picker-field>
+                              </div>
                             </td>
+                            <td>{{ getUpdatedOn(exchangeRate) }}</td>
+                            <td>{{ getUpdateBy(exchangeRate) }}</td>
                             <td ng-show="isCRUD">
                               <button class="btn btn-warning btn-xs" ng-click="duplicateExchangeRate(index, exchangeRate)" ng-if="isExchangeRateAvailableForClone(exchangeRate)">
                                   <i class="fa fa-copy"></i>
