--- a/app/views/employee-commission-list.html
+++ b/app/views/employee-commission-list.html
@@ -153,6 +153,7 @@
       <th>Item Name</th>
       <th>Sale Type</th>
       <th>Rate Type</th>
+      <th>Updated Date/Time</th>
       <th>Actions</th>
     </tr>
     </thead>
