--- a/app/views/employee-commission-list.html
+++ b/app/views/employee-commission-list.html
@@ -165,6 +165,7 @@
       <td>{{ commission.itemName }}</td>
       <td>{{ commission.priceTypeName }}</td>
       <td>{{ commission.taxRateTypeName }}</td>
+      <td>{{ getUpdatedOn(commission) }}</td>     
       <td>
         <button class="btn btn-info btn-xs" ng-click="showCommission(commission)">
           <i class="fa fa-file"></i>
