--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -136,10 +136,7 @@
             <span class="hidden-xs btn-label">Add Relationship</span>
           </button>
 
-          <select class="form-control" name="isCaterer" ng-model="formData.isCaterer">
-             <option ng-selected="formData.isCaterer" value="true">Yes</option>
-             <option value="">No</option>
-          </select>
+          <select class="form-control" name="isCaterer" ng-model="formData.isCaterer" ng-options="item as item.name for item in isCatererDropdownOptions"></select>
 
            This is <span ng-show="!formData.isCaterer">not</span> a Catering Station
 
