--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -233,9 +233,14 @@
 
             <td width="200px">
               <div ng-show="isCRUD">
-                <date-picker-field form="stationListForm"  name="End Date {{$index+1}}" required="true"
-                    ng-model="formData.stations[$index].endDate"
-                    disable="isDateActive(station.endDate)">
+                <date-picker-field
+                  form="stationListForm"
+                  name="End Date {{$index+1}}"
+                  required="true"
+                  ng-model="formData.stations[$index].endDate"
+                  disable-past="true"
+                  end-current-effective="true"
+                  disable="canEdit(station.endDate)">
                 </date-picker-field>
               </div>
               <div ng-hide="isCRUD">{{ formData.stations[$index].endDate }}</div>
