TSVPORTAL-6929 - Hide updated info on menu assignment edit page

--- a/app/views/menu-assignment.html
+++ b/app/views/menu-assignment.html
@@ -92,7 +92,7 @@
           </div>
           <div class="col-xs-12 col-sm-2"></div>
         </div>
-        <div class="row">
+        <div class="row" ng-hide="true">
           <div class="form-group col-sm-2">
             <label>Updated User</label><br />
             {{ getUpdateBy(menuAssignment) }}
