--- a/app/views/menu-relationship-create.html
+++ b/app/views/menu-relationship-create.html
@@ -101,7 +101,7 @@
 
           </div>
 
-          <div class="row">
+          <div class="row" ng-hide="true">
             <div class="form-group col-sm-6">
               <label>Updated User</label><br />
               {{ getUpdateBy(formData) }}
