--- a/app/views/employee-commission-list.html
+++ b/app/views/employee-commission-list.html
@@ -154,6 +154,7 @@
       <th>Sale Type</th>
       <th>Rate Type</th>
       <th>Updated Date/Time</th>
+      <th>Updated User</th>                   
       <th>Actions</th>
     </tr>
     </thead>
@@ -165,7 +166,8 @@
       <td>{{ commission.itemName }}</td>
       <td>{{ commission.priceTypeName }}</td>
       <td>{{ commission.taxRateTypeName }}</td>
-      <td>{{ getUpdatedOn(commission) }}</td>     
+      <td>{{ getUpdatedOn(commission) }}</td>   
+      <td>{{ getUpdateBy(commission) }}</td>      
       <td>
         <button class="btn btn-info btn-xs" ng-click="showCommission(commission)">
           <i class="fa fa-file"></i>
