--- a/app/views/commission-data-table.html
+++ b/app/views/commission-data-table.html
@@ -68,6 +68,7 @@
         <th>Cash Percent</th>
         <th>Stock Percent</th>
         <th>Incentive Increment</th>
+        <th>Updated Date/Time</th>        
         <th>Actions</th>
       </tr>
       </thead>
