--- a/app/views/commission-data-table.html
+++ b/app/views/commission-data-table.html
@@ -69,6 +69,7 @@
         <th>Stock Percent</th>
         <th>Incentive Increment</th>
         <th>Updated Date/Time</th>        
+        <th>Updated User</th>         
         <th>Actions</th>
       </tr>
       </thead>
