--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -137,9 +137,10 @@
             <span class="hidden-xs btn-label">Add Relationship</span>
           </button>
 
-          <select class="form-control" name="isCaterer" ng-model="formData.isCaterer" ng-options="item as item.name for item in isCatererDropdownOptions"></select>
-
-           This is <span ng-show="!formData.isCaterer">not</span> a Catering Station
+          <select class="form-control" name="isCaterer" required="true" ng-model="formData.isCaterer" ng-options="item as item.name for item in isCatererDropdownOptions">
+            <option value="">Is Catering Station?</option>
+          </select>
+          <span ng-show="formData.isCaterer">This is <span ng-show="!formData.isCaterer.value">not</span> a Catering Station<span>
 
        </fieldset>
 
