TSVPORTAL-10859 - Stashing current changes until backend is fixed

--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -70,6 +70,7 @@
               <div ng-bind-html="city.cityName | highlight: $select.search"></div>
             </ui-select-choices>
           </ui-select>
+            {{ formData.city }}
         </div>
 
       </div>
