TSVPORTAL-6930 - Fixing table to show properly on lower resulution

--- a/app/views/company-exchange-rate-edit.html
+++ b/app/views/company-exchange-rate-edit.html
@@ -75,10 +75,10 @@
                 <table class="table table-bordered table-hover ng-scope">
                     <thead>
                         <tr>
-                            <th>Accepted Currency</th>
+                            <th width="5%">Accepted Currency</th>
                             <th width="20%">Denomination</th>
-                            <th width="20%">EasyPay Denomination</th>
-                            <th>Exchange Rate*</th>
+                            <th width="15%">EasyPay Denomination</th>
+                            <th width="10%">Exchange Rate*</th>
                             <th colspan="2">Start/End Date*</th>
                             <th>Updated Date/Time</th>
                             <th>Updated User</th>
