--- a/app/views/currency-edit.html
+++ b/app/views/currency-edit.html
@@ -136,7 +136,7 @@
                     </div>
                   </div>
 
-                  <div class="col-xs-12 col-md-2 col-sm-6">
+                  <div class="col-xs-12 col-md-2 col-sm-6" ng-if="!currency.isNew">
                     <div class="form-group">
                       <label>Updated Date/Time</label><br />
                       {{ getUpdatedOn(currency) }}
