TSVPORTAL-3211 - Fixing undefined exception

--- a/app/views/menu-edit.html
+++ b/app/views/menu-edit.html
@@ -193,6 +193,7 @@
                    name="menuItem-{{$index}}"
                    ng-model="item.selectedItem.itemName"
                    ng-disabled="!isMenuEditable()"/>
+            <div ng-if="item.isExpired" style="color:red">This menu item expired!</div>
           </td>
           <td>
             <input custom-validity
@@ -205,7 +206,6 @@
                    ng-model="item.itemQty"
                    placeholder="{{$index}}"
                    ng-disabled="!isMenuEditable()"/>
-            <div ng-if="item.isExpired" style="color:red">This menu item is expired!</div>
           </td>
           <td ng-show="isMenuEditable()">
             <button class="btn btn-danger btn-xs" ng-click="removeItem(item.menuIndex)">
