--- a/app/views/menu-edit.html
+++ b/app/views/menu-edit.html
@@ -193,7 +193,7 @@
                    name="menuItem-{{$index}}"
                    ng-model="item.selectedItem.itemName"
                    ng-disabled="!isMenuEditable()"/>
-            <div ng-if="item.isExpired" style="color:red">This menu item expired!</div>
+            <div ng-if="item.isExpired && !isMenuViewOnly()" style="color:red">This menu item expired!</div>
           </td>
           <td>
             <input custom-validity
