--- a/app/views/menu-edit.html
+++ b/app/views/menu-edit.html
@@ -186,6 +186,8 @@
                 <div ng-bind-html="menuItem.itemName | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
+            <div ng-if="!item.selectedItem.hasActiveItemVersions" style="color:red">This menu item expired!</div>
+            {{item.selectedItem}}
           </td>
           <td ng-if="!isMenuEditable()">
             <input type="text"
@@ -193,7 +195,8 @@
                    name="menuItem-{{$index}}"
                    ng-model="item.selectedItem.itemName"
                    ng-disabled="!isMenuEditable()"/>
-            <div ng-if="item.isExpired && !isMenuViewOnly()" style="color:red">This menu item expired!</div>
+            <div ng-if="!item.selectedItem.hasActiveItemVersions && !isMenuViewOnly()" style="color:red">This menu item expired!</div>
+            {{item.selectedItem}}
           </td>
           <td>
             <input custom-validity
